# whodunit

./: .envrc  10.json  100.json  1000.json  10_000-unique.json  10_000.json  20_000-two-of-each.json  Cargo.toml  input.json  readme.org  shell.nix
benches/: my_benchmark.rs  string_destructuring.rs
src/: lib.rs
