[package]
name = "whodunit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.3.5", features = [ "html_reports" ] }
serde = { version = "1.0.128", features = [ "derive" ] }
serde_json = "1.0.66"

[lib]
bench = false

[[bench]]
name = "my_benchmark"
harness = false


[profile.bench]
debug = true
